# transducers

./: .gitignore  README.md  transducers.cabal
.github/workflows/: ci.yaml
src/: Transducers.hs
src/Data/: Transducer.hs
test/: Spec.hs
