name:                transducers
version:             0.1.0.0
synopsis:            Transducers for Haskell
-- description:
homepage:            https://github.com/konsumlamm/transducers#readme
license:             BSD3
license-file:        LICENSE
author:              konsumlamm
maintainer:          konsumlamm@gmail.com
copyright:           2020 konsumlamm
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Transducer
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/konsumlamm/transducers
